<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <!-- Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/child_services"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <!-- Buttons -->
    <Button
        android:id="@+id/buttonCreateChildProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_child_s_profile"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/buttonCreateVaccineProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_vaccine_profile"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/buttonViewProfiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_saved_vaccine_profiles"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/buttonSetReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_a_vaccine_reminder"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
