<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ReminderSettingsActivity">

    <CheckBox
        android:id="@+id/checkBoxEnableReminders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_reminders" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextReminderPeriod"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/reminder_period_weeks"
            android:inputType="number" />

        <ImageView
            android:id="@+id/imageViewTooltip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info"
        android:contentDescription="@string/tooltip_reminder" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_reminder" />

</LinearLayout>
