<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#f0f0f0">

    <EditText
        android:id="@+id/editTextPatientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/patient_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:background="@drawable/border"
        android:padding="12dp" />

    <EditText
        android:id="@+id/editTextAppointmentDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:focusable="false"
        android:hint="@string/appointment_date"
        android:inputType="date"
        android:minHeight="48dp"
        android:background="@drawable/border"
        android:padding="12dp"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/editTextAppointmentTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:focusable="false"
        android:hint="@string/appointment_time"
        android:minHeight="48dp"
        android:background="@drawable/border"
        android:padding="12dp"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/editTextContactInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/contact_information"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:background="@drawable/border"
        android:padding="12dp"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/buttonScheduleAppointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_appointment"
        android:padding="12dp"
        android:layout_marginTop="8dp" />
</LinearLayout>
